--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -37,7 +37,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/UsersPageResponse"
+                $ref: "#/components/schemas/PageResponseUser"
         "400":
           description: Invalid paging parameters
           content:
@@ -132,10 +132,10 @@ components:
           $ref: "#/components/schemas/User"
       required:
         - user
-    UsersPageResponse:
+    PageResponseUser:
       type: object
       properties:
-        users:
+        items:
           type: array
           items:
             $ref: "#/components/schemas/User"
@@ -147,7 +147,7 @@ components:
           type: integer
           format: int64
       required:
-        - users
+        - items
         - page
         - size
         - total
